<resources>
    <string name="app_name">mp3 player</string>
    <string name="btn_shuffle">Shuffle</string>
    <string name="btn_fav">Favourites</string>
    <string name="btn_playlist">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="btn_back">Back Button</string>
    <string name="fav">Fav Button</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">loading...</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="floating_btn">Floating button</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="nav_header_text">Welcome to the \nworld of music</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>


</resources>