<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/btn_back" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/world_of_music"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/fav"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/baseline_favorite_border_24"
            app:tint="@android:color/holo_red_dark" />
    </LinearLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImagePA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/sp"
        app:shapeAppearanceOverlay="@style/softCorner"
        app:strokeColor="@color/blue"
        app:strokeWidth="5dp">
    </com.google.android.material.imageview.ShapeableImageView>
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous"
            app:iconSize="40dp">
        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_pause_24"
            app:iconSize="50dp"
            android:layout_marginHorizontal="35dp"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white">
        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_navigate_next_24"
            app:iconSize="40dp">
        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="25dp"
    android:orientation="horizontal"
    android:layout_margin="20dp"
    android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/start_tv"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="NestedWeights" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/end_tv"
        android:gravity="center"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_repeat_24"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_graphic_eq_24"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:contentDescription="@string/equalizer_btn"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_timer_24"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:contentDescription="@string/timer_btn"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_share_24"
            android:background="@android:color/transparent"
            app:tint="@color/pink"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>