<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginBottom="5dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/songImageView"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:layout_marginStart="5dp"
            >

        </com.google.android.material.imageview.ShapeableImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/songName"
                android:layout_toEndOf="@id/songImageView"
                android:layout_toStartOf="@id/songDuration"
                android:text="@string/song_name"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:singleLine="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/songAlbum"
        android:layout_toEndOf="@id/songImageView"
        android:layout_toStartOf="@id/songDuration"
        android:text="@string/song_album"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:singleLine="true"/>

        <TextView
            android:id="@+id/songDuration"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/start_tv"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"/>


</RelativeLayout>